fix(f, AuthForm): updated spacing of elements

--- a/frontend/src/web/components/AuthForm/AuthForm.module.css
+++ b/frontend/src/web/components/AuthForm/AuthForm.module.css
@@ -1,7 +1,8 @@
 .formTitleContainer {
   display: flex;
+  align-items: center;
   gap: 16px;
-  margin-bottom: 20px;
+  margin-bottom: 26px;
 }
 
 .title {
